fixed margin problem on social buttons and overflow-x hidden to prevent sidescroll on mobile

--- a/scss/_social.scss
+++ b/scss/_social.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
 
   @include tablet {
     flex-direction: column;
